--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5301245942772263"
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <body>
