--- a/index.html
+++ b/index.html
@@ -106,13 +106,18 @@
       </div>
     </div>
     <footer>
-      made by
-      <a
-        href="http://github.com/Frazix12"
-        target="_blank"
-        rel="noopener noreferrer"
-        >Frazix</a
-      >
+      <div>
+        © 2024. All Rights Reserved. <a href="./privacy.html">Privacy Policy</a>
+      </div>
+      <div class="frazix">
+        Made by
+        <a
+          href="http://github.com/Frazix12"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Frazix</a
+        >
+      </div>
     </footer>
     <script>
       function GetNpri() {
