--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
     />
     <link rel="stylesheet" href="style.css" />
     <script
+      async="async"
+      data-cfasync="false"
+      src="//pl22914687.profitablegatecpm.com/f3618cd02efad5cd1db7b820851a12d7/invoke.js"
+    ></script>
+    <div id="container-f3618cd02efad5cd1db7b820851a12d7"></div>
+    <script
       async
       src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5301245942772263"
       crossorigin="anonymous"
