--- a/index.html
+++ b/index.html
@@ -50,7 +50,13 @@
                   <input type="number" class="spec-value" id="Carea" />
                   <div class="spec-label">Bmax (G)</div>
                   <input type="number" class="spec-value" id="Bmax" />
-                  <div class="primary-turns"><p id="Npri"></p></div>
+                  <div class="primary-turns">
+                    <a
+                      target="blank_"
+                      href="https://scareshortnovel.com/c5z947e3?key=8205a66735ef38af5db07244b0751637"
+                      id="Npri"
+                    ></a>
+                  </div>
                 </div>
                 <div class="bmax-check">
                   <div class="bmax-label">Bmax CHECKING</div>
@@ -107,7 +113,20 @@
         </div>
       </div>
     </div>
-    <div id="container-f3618cd02efad5cd1db7b820851a12d7"></div>
+    <script type="text/javascript">
+      atOptions = {
+        key: "ebfaeb587b8eb128c3c33139a674a014",
+        format: "iframe",
+        height: 600,
+        width: 160,
+        params: {},
+      };
+      document.write(
+        "<scr" +
+          'ipt type="text/javascript" src="//www.topcreativeformat.com/ebfaeb587b8eb128c3c33139a674a014/invoke.js"></scr' +
+          "ipt>"
+      );
+    </script>
     <footer>
       <div>
         © 2024. All Rights Reserved. <a href="./privacy.html">Privacy Policy</a>
@@ -249,20 +268,6 @@
       data-cfasync="false"
       src="//pl22914687.profitablegatecpm.com/f3618cd02efad5cd1db7b820851a12d7/invoke.js"
     ></script>
-
-    <script type="text/javascript">
-      atOptions = {
-        key: "ebfaeb587b8eb128c3c33139a674a014",
-        format: "iframe",
-        height: 600,
-        width: 160,
-        params: {},
-      };
-      document.write(
-        "<scr" +
-          'ipt type="text/javascript" src="//www.topcreativeformat.com/ebfaeb587b8eb128c3c33139a674a014/invoke.js"></scr' +
-          "ipt>"
-      );
-    </script>
+    <div id="container-f3618cd02efad5cd1db7b820851a12d7"></div>
   </body>
 </html>
