--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
       atOptions = {
         key: "ebfaeb587b8eb128c3c33139a674a014",
         format: "iframe",
-        height: 600,
-        width: 160,
+        height: 60,
+        width: "100%",
         params: {},
       };
       document.write(
@@ -263,11 +263,15 @@
       }
       setInterval(result, 100);
     </script>
-    <script
+    <!-- <script
       async="async"
       data-cfasync="false"
       src="//pl22914687.profitablegatecpm.com/f3618cd02efad5cd1db7b820851a12d7/invoke.js"
     ></script>
-    <div id="container-f3618cd02efad5cd1db7b820851a12d7"></div>
+    <div id="container-f3618cd02efad5cd1db7b820851a12d7"></div> -->
+    <script
+      type="text/javascript"
+      src="//scareshortnovel.com/93/ee/c7/93eec76e0a5f215b002ff16944620fe4.js"
+    ></script>
   </body>
 </html>
