--- a/index.html
+++ b/index.html
@@ -117,9 +117,11 @@
       atOptions = {
         key: "ebfaeb587b8eb128c3c33139a674a014",
         format: "iframe",
-        height: 60,
-        width: "100%",
-        params: {},
+        height: 600,
+        width: 160,
+        params: {
+          background_color: "transparent",
+        },
       };
       document.write(
         "<scr" +
